# Mice_project

./: .gitignore  README.md  log.lammps  pyproject.toml  requirements.txt  sandy.py  setup.cfg  setup.py  tox.ini
csv_files/: 12_6.csv  12_6_5expave.csv  16_8.csv  20_10.csv  24_12.csv  28_14.csv  32_16.csv  al_liquid_fast.csv  al_liquid_slow.csv
md_simulations/Aluminum/liquid_pure/700/: COLVAR  data.final  in.temp  plumed.out
md_simulations/Aluminum/liquid_pure/750/: COLVAR  data.final  in.temp  plumed.out
md_simulations/Aluminum/liquid_pure/800/: COLVAR  bck.0.COLVAR  data.final  dump.0.dcd  plumed.out
md_simulations/Aluminum/liquid_pure/850/: COLVAR  bck.0.plumed.out  data.final  in.al  in.setup  log.lammps  plumed.out
md_simulations/Aluminum/liquid_pure/900/: COLVAR  bck.1.COLVAR  bck.1.plumed.out  data.final  dump.0.dcd  plumed.out  start.lmp
src/Mice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/Mice_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/mice/: __init__.py  config.gin  sandbox.py
src/mice/compare_files/: ising_compare.py
src/mice/ising_const/: ising_maker.py  ising_numba  ising_script.py
src/mice/main/: box_menu.py  box_menu_ising.py  entropy_menu.py  entropy_menu_sweep.py  ising_loader.py  lattice_saver.py  sandbox.py  sweep_func.py  sweep_func_ising.py
src/mice/neural_net/: architectures.py
src/mice/utils/: analyze_results.py  dist_calc.py  my_utils.py  pytorch_modules.py
src/model_weights/: mice_conv_model_weights.pth  new_fcn_model_weights.pth  sandnet_model_weights.pth
tests/: test_mice.py
(+8 files in other folders)
