[metadata]
name=Mice_project
version=0.0.1
author=J. Random Hacker
author_email=jrh@example.com

[options]
packages=mice
install_requires=
    colorama >= 0.4.4
    cycler >= 0.11.0
    fonttools >= 4.28.5
    gin >= 0.1.6
    gin-config >= 0.5.0
    h5py >= 3.6.0
    joblib >= 1.1.0
    kiwisolver >= 1.3.2
    matplotlib >= 3.5.1
    numpy >= 1.20.1
    packaging >= 21.3
    pandas >= 1.3.5
    Pillow >= 9.0.0
    pyparsing >= 3.0.6
    python-dateutil >= 2.8.2
    pytz >= 2021.3
    scikit-learn >= 1.0.2
    scipy >= 1.7.3
    six >= 1.16.0
    sklearn >= 0.0
    threadpoolctl >= 3.0.0
    # torch >= 1.8.1
    tqdm >= 4.62.3
    typing_extensions >= 4.0.1

python_requires = >=3.6
package_dir =
    =src
long_description=open('README.txt').read()

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
mice = py.typed

[flake8]
max-line-length=180

ignore=
    F401 # A module has been imported but is not used anywhere in the file.
    E302 # Two blank lines are expected between functions and classes.
    W293 # Blank lines should not contain any tabs or spaces.
    E231 # missing whitespace after ','.
    E226 # missing whitespace around arithmetic operator
    E261 # at least two spaces before inline comment.
    E228 # missing whitespace around modulo operator
    F541 # f-string is missing placeholders
